--- a/ubay/www/index.pug
+++ b/ubay/www/index.pug
@@ -1,4 +1,5 @@
 head
+   script(src='https://cdn.jsdelivr.net/gh/intuition-dev/intuServices@v1911.2/webLib/gmetrics.js')
 body
    script.
       window.location.href = '/about/about/'
