--- a/site/www/index.pug
+++ b/site/www/index.pug
@@ -1,4 +1,6 @@
 head
+   script(src='https://cdn.jsdelivr.net/gh/intuition-dev/intuServices@v1911.2/webLib/gmetrics.js')
+
    script.
       window.location.href = '/landing/low'
 body
