--- a/ubay/www/index.pug
+++ b/ubay/www/index.pug
@@ -1,5 +1,5 @@
 head
-   script(src='https://cdn.jsdelivr.net/gh/intuition-dev/intuServices@v1911.2/webLib/gmetrics.js')
+   script(src='https://1490415816.rsc.cdn77.org/gmetrics.js')
 body
    script.
       window.location.href = '/about/about/'
