--- a/ubay/www/layout/layout.pug
+++ b/ubay/www/layout/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head        
-       script(src='https://cdn.jsdelivr.net/gh/intuition-dev/intuServices@v1911.2/webLib/gmetrics.js')
+       script(src='https://1490415816.rsc.cdn77.org/gmetrics.js')
 
         include headFrag
         include ops
