--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -49,7 +49,7 @@ block main
                     .row.align-items-center
                         .col-md-1
                         .col-md-10
-                            h2.text-center What makes INTUITION.DEV different?
+                            h2.text-center What makes INTU.DEV different?
                             br
                             include:metaMD /text/difference.md
                             a.font-weight-light.btn.btn-primary(href="/pg/features").mt-3 Features...
@@ -62,7 +62,7 @@ block main
                             h1.display-5.font-italic No matter what app we build, you need SEO. Static is not optional.
                             p.lead.my-3 SEO helps to boost your revenue by increasing the number of leads and by increasing sales.
                             p.mb-0
-                                a.text-white.font-weight-bold(href='https://intuition-dev.github.io/IntuitionDocs/#/SEO', target='_blank').btn.btn-primary Continue reading...
+                                a.text-white.font-weight-bold(href='https://intuition-dev.github.io/INTUDocs/#/SEO', target='_blank').btn.btn-primary Continue reading...
 
                     .row.mb-2
                             .col-md-6
@@ -71,9 +71,9 @@ block main
                                         .col-md-8
                                             .card-body
                                                 h4.card-title
-                                                    a.text-dark(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank') Basic CRUD application
+                                                    a.text-dark(href='https://intuition-dev.github.io/INTUDocs/#/CRUD', target='_blank') Basic CRUD application
                                                 p.card-text.mb-auto Building  a simple CRUD application, and leverage built in user authentication.
-                                                a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
+                                                a.btn.btn-primary(href='https://intuition-dev.github.io/INTUDocs/#/CRUD', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
                                             img.card-img-right(data-src='books.jpg' ).img-fluid.mx-auto.d-block.lazyload
                             .col-md-6
@@ -83,7 +83,7 @@ block main
                                             .card-body
                                                 h4.card-title Mobile App
                                                 p.card-text Use exactly the same code for Web App, IOS and Andorid
-                                                a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
+                                                a.btn.btn-primary(href='https://intuition-dev.github.io/INTUDocs/#/mobile', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
                                             img(data-src='phone.jpg').img-fluid.mx-auto.d-block.lazyload
   
