--- a/site/layouts/layout.pug
+++ b/site/layouts/layout.pug
@@ -1,5 +1,5 @@
 head
-   script(src='https://1490415816.rsc.cdn77.org/gmetrics.js')
+   script(src='https://1490415816.rsc.cdn77.org/lib/gmetrics.js')
 
    include headFrag
    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.0/bootStrap/css/bootstrapTop.css')
