--- a/site/ex/marq/index.pug
+++ b/site/ex/marq/index.pug
@@ -6,7 +6,7 @@ body
 
    p
    hr
-   a(href='http://real.mbake.org') Git source code
+   a(href='http://real.metabake.net') Git source code
 
    script.
       console.log('ani')
