--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -49,7 +49,7 @@ block main
                     .row.align-items-center
                         .col-md-1
                         .col-md-10
-                            h2.text-center What makes INTU.DEV different?
+                            h2.text-center What makes INTUITION.DEV different?
                             br
                             include:metaMD /text/difference.md
                             a.font-weight-light.btn.btn-primary(href="/pg/features").mt-3 Features...
