--- a/site/layouts/footer.pug
+++ b/site/layouts/footer.pug
@@ -23,7 +23,7 @@
       div.py-5
          .row
             .col-md-6
-               a.h5(href="/").text-white INTU.DEV
+               a.h5(href="/").text-white INTUITION.DEV
                div.text-white.star-it
                   include:metaMD /text/song.md
             .col-md-6.text-right
@@ -34,7 +34,7 @@
    .bg-very-dark
       .p-2.d-flex.justify-content-between.text-secondary
          .copyright.font-weight-light &#169; 2019 
-            span.d-inline-block.pl-1 INTU.DEV
+            span.d-inline-block.pl-1 INTUITION.DEV
          
    
    
