--- a/site/layouts/navbar.pug
+++ b/site/layouts/navbar.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-light
-   a.navbar-brand#brand(href='/') INTU.DEV
+   a.navbar-brand#brand(href='/') INTUITION.DEV
    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarText')
       span.navbar-toggler-icon
 
@@ -10,7 +10,7 @@ nav.navbar.navbar-expand-lg.navbar-light
          li.nav-item
             a.nav-link(href='/pg/features/') Features
          li.nav-item
-            a.nav-link(href='http://docs.mbake.org', target="_blank") Docs
+            a.nav-link(href='http://docs.metabake.net', target="_blank") Docs
       
          // li.nav-item
             a.nav-link(href='/pg/examples') Examples
