--- a/site/layouts/navbar.pug
+++ b/site/layouts/navbar.pug
@@ -16,6 +16,6 @@ nav.navbar.navbar-expand-lg.navbar-light
             a.nav-link(href='/pg/examples') Examples
 
       
-      a.navbar-text(href='//github.com/intuition-dev', target="_blank")
+      a.navbar-text(href='//github.com/INTUITION-dev', target="_blank")
          h2.text-dark
             i.fa.fa-github
