--- a/site/layouts/navbar.pug
+++ b/site/layouts/navbar.pug
@@ -10,7 +10,7 @@ nav.navbar.navbar-expand-lg.navbar-light
          li.nav-item
             a.nav-link(href='/pg/features/') Features
          li.nav-item
-            a.nav-link(href='http://docs.metabake.net', target="_blank") Docs
+            a.nav-link(href='http://intuition-dev.github.io/intuDocs', target="_blank") Docs
       
          // li.nav-item
             a.nav-link(href='/pg/examples') Examples
