--- a/site/layouts/layout.pug
+++ b/site/layouts/layout.pug
@@ -2,7 +2,7 @@ head
    script(src='https://1490415816.rsc.cdn77.org/lib/gmetrics.js')
 
    include headFrag
-   link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/INTUITION-dev/intuDS@v1.0.0/bootStrap/css/bootstrapTop.css')
+   link(rel='stylesheet', href='/assets/css/custom.css')
 
    block head2
 body
