--- a/www/5625Vid/items/custels/fraglist/index.pug
+++ b/www/5625Vid/items/custels/fraglist/index.pug
@@ -1,7 +1,7 @@
 head
     include /common/headFrag
 
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/INTUITION-dev/intuDesignWork@v1.0.5/src/css/main.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/INTUITION-dev/intuDesignWork@v1.2.6/src/css/global.css')
 
 body
     
