--- a/www/5625Vid/items/itemLay.pug
+++ b/www/5625Vid/items/itemLay.pug
@@ -1,6 +1,6 @@
 head
     include /common/headFrag
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/INTUITION-dev/intuDesignWork@v1.0.5/src/css/main.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/INTUITION-dev/intuDesignWork@v1.2.6/src/css/global.css')
 
 
 body
